fix z-index header

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,7 @@
   padding: 18px 0px;
   position: fixed;
   width: 100%;
+  z-index: 8;
 }
 
 .navigation {
